Updated Building Chef Server Omnibus (markdown)